[gd_scene load_steps=36 format=3 uid="uid://cxww7be8vx7vr"]

[ext_resource type="Script" uid="uid://c8i5ddpr562g4" path="res://Scripts/main_menu.gd" id="1_48xlc"]
[ext_resource type="PackedScene" uid="uid://beasl3vu4rxuy" path="res://Scenes/sky.tscn" id="2_1ehe0"]
[ext_resource type="FontFile" uid="uid://d30xm2hkn3vfc" path="res://fonts/PixelOperator8-Bold.ttf" id="3_1ehe0"]
[ext_resource type="Texture2D" uid="uid://jhbtbjjwipi2" path="res://Blue_witch/B_witch_run.png" id="3_opfnp"]
[ext_resource type="Texture2D" uid="uid://dxgyr8f4t78p4" path="res://Menu/Buttons/Close.png" id="4_n45e2"]
[ext_resource type="Texture2D" uid="uid://cgsg56usg1iug" path="res://Background_1.png" id="4_yhxw7"]
[ext_resource type="Texture2D" uid="uid://c6chth87yqvk0" path="res://Menu/Buttons/Achievements.png" id="5_opfnp"]
[ext_resource type="Texture2D" uid="uid://c5sscvm3vdl2l" path="res://Background_2.png" id="6_cp0ys"]
[ext_resource type="Texture2D" uid="uid://c4l03xxqq3wwc" path="res://Transparent Button.png" id="7_trj04"]
[ext_resource type="Texture2D" uid="uid://bp6c70vild1el" path="res://Menu/Buttons/Play.png" id="10_vr1f0"]
[ext_resource type="Texture2D" uid="uid://bwdqxqdgi4wlv" path="res://Menu/Buttons/Restart.png" id="11_t1dhk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cp0ys"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhxw7"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_trj04"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_16hvj"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr1f0"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1dhk"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5egv6"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtepg"]
atlas = ExtResource("3_opfnp")
region = Rect2(0, 336, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_cp0ys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp0ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhxw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trj04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16hvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr1f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1dhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5egv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtepg")
}],
"loop": true,
"name": &"WALK",
"speed": 9.0
}]

[sub_resource type="Animation" id="Animation_vr1f0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_16hvj"]
resource_name = "witch"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 1.83333, 2.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1dhk"]
_data = {
&"RESET": SubResource("Animation_vr1f0"),
&"witch": SubResource("Animation_16hvj")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.219608, 0.176471, 0.694118, 1)
corner_radius_top_left = 220
corner_radius_top_right = 220
corner_radius_bottom_right = 220
corner_radius_bottom_left = 220
shadow_color = Color(0.745098, 0, 0, 0.976471)

[sub_resource type="Animation" id="Animation_n45e2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(87, 69)]
}

[sub_resource type="Animation" id="Animation_ce3w2"]
resource_name = "Title_card"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.0117647), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8dnnj"]
resource_name = "Title_card_2"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.06667, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(87, 69), Vector2(87, -79)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_opfnp"]
_data = {
&"RESET": SubResource("Animation_n45e2"),
&"Title_card": SubResource("Animation_ce3w2"),
&"Title_card_2": SubResource("Animation_8dnnj")
}

[sub_resource type="Animation" id="Animation_t1dhk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mainmenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_trj04"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mainmenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5egv6"]
resource_name = "layer"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtepg"]
_data = {
&"RESET": SubResource("Animation_t1dhk"),
&"fade_to_black": SubResource("Animation_trj04"),
&"layer": SubResource("Animation_5egv6")
}

[sub_resource type="Animation" id="Animation_vtepg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yhxw7"]
resource_name = "fade_to_black"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8dnnj"]
_data = {
&"RESET": SubResource("Animation_vtepg"),
&"fade_to_black": SubResource("Animation_yhxw7")
}

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_48xlc")

[node name="sky" parent="." instance=ExtResource("2_1ehe0")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(649, 323)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Mainmenu" type="Node2D" parent="CanvasLayer"]
position = Vector2(4, 0)

[node name="clouds" type="Node2D" parent="CanvasLayer/Mainmenu"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Mainmenu/clouds"]
offset_right = 1296.0
offset_bottom = 644.0
texture = ExtResource("6_cp0ys")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Mainmenu/clouds"]
offset_left = 2.0
offset_top = -2.0
offset_right = 1297.0
offset_bottom = 648.0
texture = ExtResource("4_yhxw7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Mainmenu"]
visible = false
z_index = 1
position = Vector2(553.154, 375)
scale = Vector2(1.30288, 1.20833)
sprite_frames = SubResource("SpriteFrames_cp0ys")
animation = &"WALK"
autoplay = "WALK"
frame_progress = 0.200266
speed_scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Mainmenu/AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_t1dhk")
}
autoplay = "witch"

[node name="Title Card" type="Node2D" parent="CanvasLayer/Mainmenu"]
z_index = 2
position = Vector2(87, 69)
scale = Vector2(0.844812, 0.787398)

[node name="Label3" type="Label" parent="CanvasLayer/Mainmenu/Title Card"]
offset_left = 441.533
offset_top = 180.0
offset_right = 1354.53
offset_bottom = 532.0
scale = Vector2(0.461009, 0.765778)
theme_override_colors/font_color = Color(0.64467, 0.374877, 0.713426, 1)
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_1ehe0")

[node name="Label" type="Label" parent="CanvasLayer/Mainmenu/Title Card/Label3"]
layout_mode = 0
offset_left = 114.965
offset_top = 181.515
offset_right = 1071.97
offset_bottom = 262.515
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_font_sizes/font_size = 10
text = "_________________________________________________        ________________________________________________"

[node name="Label2" type="Label" parent="CanvasLayer/Mainmenu/Title Card/Label3"]
layout_mode = 0
offset_left = 114.965
offset_top = 194.573
offset_right = 1071.97
offset_bottom = 275.573
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_font_sizes/font_size = 10
text = "_________________________________________________        ________________________________________________"

[node name="Label" type="Label" parent="CanvasLayer/Mainmenu/Title Card"]
offset_left = 409.532
offset_top = 224.0
offset_right = 1322.53
offset_bottom = 325.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.188235, 0.376471, 0.921569, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_font_sizes/font_size = 100
text = "WitcH"

[node name="Label2" type="Label" parent="CanvasLayer/Mainmenu/Title Card"]
offset_left = 460.532
offset_top = 344.0
offset_right = 1373.53
offset_bottom = 445.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.443137, 0, 0.168627, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_font_sizes/font_size = 100
text = "HunT"

[node name="Title_card_animation" type="AnimationPlayer" parent="CanvasLayer/Mainmenu/Title Card"]
root_node = NodePath("../Label")
libraries = {
&"": SubResource("AnimationLibrary_opfnp")
}
autoplay = "Title_card"

[node name="exit" type="TextureButton" parent="CanvasLayer/Mainmenu"]
offset_left = 995.0
offset_top = 536.0
offset_right = 1006.0
offset_bottom = 543.0
scale = Vector2(6.41733, 5.71667)
texture_normal = ExtResource("4_n45e2")
ignore_texture_size = true
stretch_mode = 3

[node name="about" type="TextureButton" parent="CanvasLayer/Mainmenu"]
offset_left = 1130.0
offset_top = 526.0
offset_right = 1151.0
offset_bottom = 544.0
scale = Vector2(3.88235, 3.4)
texture_normal = ExtResource("5_opfnp")
ignore_texture_size = true
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Mainmenu"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_vtepg")
}

[node name="Pressplay Button" type="Label" parent="CanvasLayer/Mainmenu"]
offset_left = 453.0
offset_top = 476.0
offset_right = 813.0
offset_bottom = 507.0
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_font_sizes/font_size = 30
text = "PRESS TO PLAY"

[node name="press to play" type="TextureButton" parent="CanvasLayer/Mainmenu/Pressplay Button"]
layout_mode = 0
offset_left = -495.0
offset_top = -40.0
offset_right = -470.0
offset_bottom = -24.0
scale = Vector2(55, 5)
texture_normal = ExtResource("7_trj04")
ignore_texture_size = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Mainmenu/Pressplay Button"]
libraries = {
&"": SubResource("AnimationLibrary_8dnnj")
}
autoplay = "fade_to_black"

[node name="Start" type="TextureButton" parent="CanvasLayer/Mainmenu"]
offset_left = 599.0
offset_top = 313.0
offset_right = 722.0
offset_bottom = 420.0
texture_normal = ExtResource("10_vr1f0")
stretch_mode = 0

[node name="Saved_button" type="Node2D" parent="CanvasLayer/Mainmenu"]
visible = false

[node name="Continue" type="TextureButton" parent="CanvasLayer/Mainmenu/Saved_button"]
offset_left = 515.0
offset_top = 310.0
offset_right = 635.0
offset_bottom = 416.0
texture_normal = ExtResource("10_vr1f0")
stretch_mode = 0

[node name="Reset" type="TextureButton" parent="CanvasLayer/Mainmenu/Saved_button"]
offset_left = 657.0
offset_top = 309.0
offset_right = 770.0
offset_bottom = 424.0
texture_normal = ExtResource("11_t1dhk")
stretch_mode = 0

[connection signal="pressed" from="CanvasLayer/Mainmenu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Mainmenu/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="CanvasLayer/Mainmenu/Pressplay Button/press to play" to="." method="_on_press_to_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Mainmenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Mainmenu/Saved_button/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Mainmenu/Saved_button/Reset" to="." method="_on_reset_pressed"]
